--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<h2>About Me</h2>
 				<h5>Student <span>& Developer</span></h5>
 				<p>I am a final year undergraduate Computer Science and Engineering student trying to perfect my skills and learn new things. Currently working on a Natural Language Processing based research project. I also can design websites more & more interactive with web animations. I can provide clean code and pixel perfect design.</p>
-				<button type="button" onclick="location.href='#contact';">Let's Talk</button>
+				<button type="button" onclick="location.href='https://github.com/nobin-bokhtiar';">My Projects</button>
 			</div>
 		</div>
 	</section>
